--- a/code/css/pro360.css
+++ b/code/css/pro360.css
@@ -66,7 +66,7 @@
 .pro360  canvas {
     backface-visibility: hidden;
     transform: translate3d(0px, 0px, 0px);
-    cursor: url("https://audiobalance.sirv.com/360/code/css/skin/magnifier.cur"), pointer;
+    cursor: url("./skin/magnifier.cur"), pointer;
 }
 
 .pro360-progress-panel-text:after {
@@ -135,59 +135,59 @@
 .pro360-up {
     width: 32px;
     height: 32px;
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/up.png);
+    background-image: url(./skin/up.png);
     position: absolute;
     top: 0px;
     left: 32px;
 }
 .pro360-up:hover {
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/up__o.png);
+    background-image: url(./skin/up__o.png);
 }
 
 .pro360-left {
     width: 32px;
     height: 32px;
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/left.png);
+    background-image: url(./skin/left.png);
     position: absolute;
     top: 32px;
     left: 0px;
 }
 .pro360-left:hover {
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/left__o.png);
+    background-image: url(./skin/left__o.png);
 }
 
 .pro360-right {
     width: 32px;
     height: 32px;
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/right.png);
+    background-image: url(./skin/right.png);
     position: absolute;
     top: 32px;
     left: 64px;
 }
 .pro360-right:hover {
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/right__o.png);
+    background-image: url(./skin/right__o.png);
 }
 
 .pro360-down {
     width: 32px;
     height: 32px;
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/down.png);
+    background-image: url(./skin/down.png);
     position: absolute;
     top: 64px;
     left: 32px;
 }
 .pro360-down:hover {
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/down__o.png);
+    background-image: url(./skin/down__o.png);
 }
 
 .pro360-zoom {
     width: 32px;
     height: 32px;
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/zoomin.png);
+    background-image: url(./skin/zoomin.png);
     position: absolute;
     top: 32px;
     left: 32px;
 }
 .pro360-zoom:hover {
-    background-image: url(https://audiobalance.sirv.com/360/code/css/skin/zoomin__o.png);
+    background-image: url(./skin/zoomin__o.png);
 }
